<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dylan.egen310car.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/rx"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/read_buffer"
                android:ellipsize="end"
                android:maxLines="1"
                android:id="@+id/readBuffer"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/status"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/bluetooth_status"
                android:id="@+id/bluetoothStatus"
                android:ellipsize="end"
                android:maxLines="1"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_on"
            android:id="@+id/scan"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_off"
            android:id="@+id/off"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_paired_devices"
            android:id="@+id/PairedBtn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_new_devices"
            android:id="@+id/discover"
            />

        <ListView
            android:id="@+id/devicesListView"
            android:layout_width="wrap_content"
            android:layout_height="185dp"
            android:choiceMode="singleChoice" />

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:translationX="150dp"
            android:translationY="50dp" />
        <Button
            android:translationY="60dp"
            android:translationX="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:id="@+id/left"
            />
        <Button
            android:translationY="10dp"
            android:translationX="250dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:id="@+id/right"
            />
        <Button
            android:translationY="30dp"
            android:translationX="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/backward"
            />

        <SeekBar
            android:id="@+id/seekBar"
            android:translationY="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"/>

    </LinearLayout>

</RelativeLayout>
    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<android.support.v7.widget.LinearLayoutCompat-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".MainActivity"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->


    <!--<Button-->
    <!--android:id="@+id/OnBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Bluetooth On"-->
    <!--/>-->
    <!--<Button-->
    <!--android:id="@+id/discover"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Discover devices"-->
    <!--/>-->
    <!--<Button-->
    <!--android:id="@+id/disconnectBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Disconnect"-->
    <!--/>-->
    <!--<Button-->
    <!--android:id="@+id/OffBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Off"-->
    <!--/>-->
    <!--<ListView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/devicesListView"-->
    <!--android:choiceMode="singleChoice"-->
    <!--android:layout_below="@+id/PairedBtn"-->
    <!--android:layout_alignRight="@+id/off"-->
    <!--android:layout_alignEnd="@+id/off" />-->

    <!--</android.support.v7.widget.LinearLayoutCompat>-->

    <!--<Button-->
    <!--android:id="@+id/startCar"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:scaleX="1.7"-->
    <!--android:scaleY="1.7"-->
    <!--android:text="@string/start_car"-->
    <!--android:textStyle="bold" />-->
    <!--<Button-->
    <!--android:translationY="-85dp"-->
    <!--android:translationX="150dp"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/stop"-->
    <!--android:id="@+id/stop"-->
    <!--/>-->